--- a/components/Hot/index.scss
+++ b/components/Hot/index.scss
@@ -1,3 +1,4 @@
+//@import "../../sprites";
 $color: #c9deb8;
 
 .hot {
@@ -10,13 +11,32 @@ $color: #c9deb8;
         display: flex;
         justify-content: space-between;
 
-        b {
-            font-size: 12px;
-            color: #fff;
-            border-radius: 6px;
-            padding: 4px;
-            display: inline-block;
-            background: $color;
-        }
+
     }
+    b {
+        font-size: 12px;
+        color: #fff;
+        border-radius: 6px;
+        padding: 4px;
+        display: inline-block;
+        background: $color;
+    }
+}
+
+.form-control {
+    display: block;
+    width: 90%;
+    height: 28px;
+    padding: 6px  12px;
+    font-size: 14px;
+    line-height: 1.2;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out 0.15s,-webkit-box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
 }
